# kramdown-syntax_tree_sitter

./: Gemfile
.github/workflows/: gem-publication.yml  quality-control.yml
ext/tree_sitter_adapter/: Cargo.toml
ext/tree_sitter_adapter/src/: tree_sitter_adapter.rs
