[package]
name = "tree_sitter_adapter"
version = "0.0.0"
edition = "2021"

[lib]
name = "tree_sitter_adapter"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
magnus = { version = "*", features = ["embed"] }
tree-sitter = "0.25"
tree-sitter-cli = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-loader = "0.25"
